--- a/views/index.jade
+++ b/views/index.jade
@@ -10,10 +10,10 @@ block content
     h3 Example usage 
       small (replace search_term with your own url encoded search string):
     p Get the first 10 images from a search: 
-      code https://localhost:3000/api/imagesearch/
+      code https://le-image-search.herokuapp.com/api/imagesearch/
         em search_term
     p Get images 11-20 from a search using an offset: 
-      code https://localhost:3000/api/imagesearch/
+      code https://le-image-search.herokuapp.com/api/imagesearch/
         em search_term?offset=2
     p See the 10 latest searches:
-      code https://localhost:3000/api/imagesearch/latest
+      code https://le-image-search.herokuapp.com/api/imagesearch/latest
